Add leadership section and enhance homepage UI/UX
Introduced a new 'Our Leadership' section to about.html with a director profile and placeholder content. Enhanced index.html with a hero image, a comprehensive services overview, and a back-to-top button. Updated style.css with new styles for the hero, services, director profile, and responsive design. Improved script.js to add back-to-top functionality, scroll animations, and interactive hover effects for service cards and director image.

--- a/about.html
+++ b/about.html
@@ -53,6 +53,51 @@
             </div>
         </section>
 
+        <section id="leadership" class="bg-light-grey">
+            <div class="container">
+                <h2>Our Leadership</h2>
+                <div class="director-profile">
+                    <div class="director-image">
+                        <img src="images/director-placeholder.jpg" alt="Director Profile Photo" />
+                        <div class="director-overlay">
+                            <h3>Managing Director</h3>
+                        </div>
+                    </div>
+                    <div class="director-info">
+                        <h3>[Director Name]</h3>
+                        <h4>Managing Director & Principal Valuer</h4>
+                        <div class="qualifications">
+                            <h5>Professional Qualifications:</h5>
+                            <ul>
+                                <li>Bachelor of Science in Property Studies</li>
+                                <li>Registered Professional Valuer (SACPVP)</li>
+                                <li>Member of South African Institute of Valuers (SAIV)</li>
+                                <li>[Additional qualifications to be added]</li>
+                            </ul>
+                        </div>
+                        <div class="experience">
+                            <h5>Experience & Expertise:</h5>
+                            <p>[Director's name] brings over [X] years of experience in property valuation and real estate advisory services. With a deep understanding of the South African property market, [he/she] has successfully led numerous high-profile valuation projects across residential, commercial, and agricultural sectors.</p>
+                            <p>Under [his/her] leadership, Alwandeaphiwe has established itself as a trusted partner for clients seeking accurate and reliable property valuations. [Director's name] is committed to maintaining the highest professional standards while driving innovation in valuation methodologies.</p>
+                        </div>
+                        <div class="specializations">
+                            <h5>Areas of Specialization:</h5>
+                            <div class="specialization-tags">
+                                <span class="tag">Commercial Properties</span>
+                                <span class="tag">Residential Valuations</span>
+                                <span class="tag">Agricultural Land</span>
+                                <span class="tag">Municipal Appeals</span>
+                                <span class="tag">Market Analysis</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="placeholder-note">
+                    <p><em>Note: Director profile details and professional photo to be updated with actual information.</em></p>
+                </div>
+            </div>
+        </section>
+
         <section id="why-choose-us">
             <div class="container">
                 <h2>Why Choose Alwandeaphiwe?</h2>
