--- a/index.html
+++ b/index.html
@@ -27,10 +27,62 @@
 
     <main>
         <section class="hero">
-            <div class="hero-text">
-                <h1>Expert Property Valuation</h1>
-                <p>Accurate, reliable, and professional valuation services across South Africa.</p>
-                <a href="services.html" class="btn">Our Services</a>
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Expert Property Valuation</h1>
+                        <p>Accurate, reliable, and professional valuation services across South Africa.</p>
+                        <a href="services.html" class="btn">Our Services</a>
+                    </div>
+                    <div class="hero-image">
+                        <img src="images/hero-property.jpg" alt="Modern property valuation - Professional real estate services" loading="lazy" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="services-summary" class="services-overview">
+            <div class="container">
+                <h2>Our Comprehensive Services</h2>
+                <p class="section-subtitle">Professional property valuation solutions tailored to your needs</p>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <div class="service-icon">🏢</div>
+                        <h3>Commercial Valuations</h3>
+                        <p>Expert valuations for office buildings, retail spaces, and commercial properties.</p>
+                        <a href="services.html#commercial" class="learn-more">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🏠</div>
+                        <h3>Residential Valuations</h3>
+                        <p>Accurate home valuations for buying, selling, or refinancing your property.</p>
+                        <a href="services.html#residential" class="learn-more">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🌾</div>
+                        <h3>Agricultural Valuations</h3>
+                        <p>Specialized valuations for farms, agricultural land, and rural properties.</p>
+                        <a href="services.html#agricultural" class="learn-more">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">⚖️</div>
+                        <h3>Municipal Objections</h3>
+                        <p>Professional assistance with municipal valuation appeals and objections.</p>
+                        <a href="services.html#municipal" class="learn-more">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">📊</div>
+                        <h3>Market Analysis</h3>
+                        <p>Comprehensive market research and property investment analysis.</p>
+                        <a href="services.html#analysis" class="learn-more">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🏛️</div>
+                        <h3>Insurance Valuations</h3>
+                        <p>Replacement cost valuations for insurance and risk management purposes.</p>
+                        <a href="services.html#insurance" class="learn-more">Learn More →</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -95,6 +147,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">&#8679;</button>
 
     <footer>
         <div class="container">
