Enhance services page with animations and new layout
Revamps the services.html page with a new hero section, detailed service descriptions, and a modernized layout. Adds comprehensive CSS for animations, responsive design, and visual enhancements across about and services sections. Updates script.js to implement intersection observer-based scroll animations, staggered effects, and improved hover interactions for a more engaging user experience.

--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
     <main>
         <section id="about">
             <div class="container">
-                <h2>About Our Company</h2>
+                <h2 class="animate-on-scroll">About Our Company</h2>
                 <div class="about-content">
-                    <div class="about-text">
+                    <div class="about-text animate-left">
                         <h3>Your Trusted Valuation Partner</h3>
                         <p>Alwandeaphiwe (Pty) Ltd is a 100% black-owned, B-BBEE level 1 contributor specializing in a comprehensive range of property valuations. We navigate the complexities of the ever-changing South African property market to provide you with innovative and constructive solutions.</p>
                         <p>Our commitment to excellence ensures we deliver the highest quality service, tailored to your specific needs. We pride ourselves on our integrity, professionalism, and dedication to providing accurate and reliable valuations that you can trust.</p>
@@ -106,7 +106,7 @@
                             <li><strong>Client Focus:</strong> We are dedicated to meeting the unique needs of each of our clients.</li>
                         </ul>
                     </div>
-                    <div class="about-image">
+                    <div class="about-image animate-right">
                         <img src="images/about-us.jpg" alt="Professional meeting">
                     </div>
                 </div>
@@ -115,8 +115,8 @@
 
         <section id="leadership" class="bg-light-grey">
             <div class="container">
-                <h2>Our Leadership</h2>
-                <div class="director-profile">
+                <h2 class="animate-on-scroll">Our Leadership</h2>
+                <div class="director-profile animate-scale">
                     <div class="director-image">
                         <img src="images/director-placeholder.jpg" alt="Director Profile Photo" />
                         <div class="director-overlay">
@@ -126,7 +126,7 @@
                     <div class="director-info">
                         <h3>[Director Name]</h3>
                         <h4>Managing Director & Principal Valuer</h4>
-                        <div class="qualifications">
+                        <div class="qualifications animate-on-scroll stagger-animation">
                             <h5>Professional Qualifications:</h5>
                             <ul>
                                 <li>Bachelor of Science in Property Studies</li>
@@ -135,12 +135,12 @@
                                 <li>[Additional qualifications to be added]</li>
                             </ul>
                         </div>
-                        <div class="experience">
+                        <div class="experience animate-on-scroll stagger-animation">
                             <h5>Experience & Expertise:</h5>
                             <p>[Director's name] brings over [X] years of experience in property valuation and real estate advisory services. With a deep understanding of the South African property market, [he/she] has successfully led numerous high-profile valuation projects across residential, commercial, and agricultural sectors.</p>
                             <p>Under [his/her] leadership, Alwandeaphiwe has established itself as a trusted partner for clients seeking accurate and reliable property valuations. [Director's name] is committed to maintaining the highest professional standards while driving innovation in valuation methodologies.</p>
                         </div>
-                        <div class="specializations">
+                        <div class="specializations animate-on-scroll stagger-animation">
                             <h5>Areas of Specialization:</h5>
                             <div class="specialization-tags">
                                 <span class="tag">Commercial Properties</span>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="placeholder-note">
+                <div class="placeholder-note animate-on-scroll">
                     <p><em>Note: Director profile details and professional photo to be updated with actual information.</em></p>
                 </div>
             </div>
@@ -160,29 +160,29 @@
 
         <section id="why-choose-us">
             <div class="container">
-                <h2>Why Choose Alwandeaphiwe?</h2>
+                <h2 class="animate-on-scroll">Why Choose Alwandeaphiwe?</h2>
                 <div class="choose-us-grid">
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Expertise & Experience</h3>
                         <p>Our team comprises highly qualified and experienced valuers with in-depth knowledge of the South African property market. We bring years of experience to every valuation, ensuring accurate and reliable results.</p>
                     </div>
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Accuracy & Reliability</h3>
                         <p>We utilize advanced methodologies and thorough research to provide precise and dependable valuations. Our commitment to accuracy ensures that our clients receive the most realistic and defensible property assessments.</p>
                     </div>
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Client-Centric Approach</h3>
                         <p>Your needs are our priority. We offer personalized services tailored to your specific requirements, ensuring clear communication and a seamless valuation process from start to finish.</p>
                     </div>
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Ethical & Professional</h3>
                         <p>As a B-BBEE Level 1 contributor, we operate with the highest ethical standards and professionalism. Our valuers are registered with the SACPVP and adhere to international valuation standards.</p>
                     </div>
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Comprehensive Services</h3>
                         <p>From residential and commercial to agricultural and specialized properties, we offer a full spectrum of valuation services. Whatever your property type, we have the expertise to assist you.</p>
                     </div>
-                    <div class="choose-us-item">
+                    <div class="choose-us-item animate-on-scroll stagger-animation">
                         <h3>Market Insight</h3>
                         <p>We stay abreast of the latest market trends, economic indicators, and regulatory changes to provide you with up-to-date and informed valuation advice, helping you make sound financial decisions.</p>
                     </div>
@@ -192,8 +192,8 @@
 
         <section id="affiliations" class="bg-light-grey">
             <div class="container">
-                <h2>Professional Affiliations</h2>
-                <div class="affiliation-logos">
+                <h2 class="animate-on-scroll">Professional Affiliations</h2>
+                <div class="affiliation-logos animate-scale">
                     <div class="logo-container">
                         <img src="images/PVP-logo_Jun06-in-08-600x410.jpg" alt="PVP Professional Valuers Logo">
                         <p>Professional Valuers Programme (PVP)</p>
