Enhance about and services pages with new images and footer
Replaced local images with Unsplash links and added lazy loading for better performance in about.html. Improved the footer with company info and legal details, and added a 'Back to Top' button to both about.html and services.html. Updated style.css with new classes for services grid, backgrounds, subtitles, icons, and 'learn more' links to support these enhancements.

--- a/about.html
+++ b/about.html
@@ -107,7 +107,8 @@
                         </ul>
                     </div>
                     <div class="about-image animate-right">
-                        <img src="images/about-us.jpg" alt="Professional meeting">
+                        <!-- Professional business meeting image -->
+                        <img src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?w=600&h=400&fit=crop" alt="Professional meeting" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -118,7 +119,8 @@
                 <h2 class="animate-on-scroll">Our Leadership</h2>
                 <div class="director-profile animate-scale">
                     <div class="director-image">
-                        <img src="images/director-placeholder.jpg" alt="Director Profile Photo" />
+                        <!-- Professional director placeholder image -->
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=500&fit=crop&crop=face" alt="Director Profile Photo" loading="lazy" />
                         <div class="director-overlay">
                             <h3>Managing Director</h3>
                         </div>
@@ -216,9 +218,24 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Alwandeaphiwe (Pty) Ltd | Reg No. 2022/767292/07</p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h4>Alwandeaphiwe (Pty) Ltd</h4>
+                    <p>19 Hazel Street, Lidhaven, 1724<br>
+                    Gauteng, South Africa</p>
+                    <p>Phone: <a href="tel:+27836237482">+27 83 623 7482</a><br>
+                    Email: <a href="mailto:info@alwandeaphiwe.co.za">info@alwandeaphiwe.co.za</a></p>
+                </div>
+                <div class="footer-legal">
+                    <p>&copy; 2025 Alwandeaphiwe (Pty) Ltd | Reg No. 2022/767292/07<br>
+                    B-BBEE Level 1 Contributor | SACPVP Registered</p>
+                </div>
+            </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">&#8679;</button>
 
     <script src="js/script.js"></script>
 </body>
