--- a/services.html
+++ b/services.html
@@ -275,6 +275,9 @@
         </div>
     </footer>
 
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">&#8679;</button>
+
     <script src="js/script.js"></script>
 </body>
 </html>
