--- a/about.html
+++ b/about.html
@@ -126,30 +126,36 @@
                         </div>
                     </div>
                     <div class="director-info">
-                        <h3>[Director Name]</h3>
+                        <h3>Mduduzi Zondi</h3>
                         <h4>Managing Director & Principal Valuer</h4>
                         <div class="qualifications animate-on-scroll stagger-animation">
                             <h5>Professional Qualifications:</h5>
                             <ul>
-                                <li>Bachelor of Science in Property Studies</li>
-                                <li>Registered Professional Valuer (SACPVP)</li>
-                                <li>Member of South African Institute of Valuers (SAIV)</li>
-                                <li>[Additional qualifications to be added]</li>
+                                <li>ND Diploma Financial Management</li>
+                                <li>National Diploma - Real Estate</li>
+                                <li>Advanced Diploma Real Estate</li>
+                                <li>Honours in Property Valuations and Management</li>
+                            </ul>
+                            <h5>Professional Accreditations:</h5>
+                            <ul>
+                                <li>South African Council for the Property Valuers Profession (SACPVP)</li>
+                                <li>South African Institute of Valuers (SAIV)</li>
+                                <li>Royal Institution of Chartered Surveyors (RICS)</li>
                             </ul>
                         </div>
                         <div class="experience animate-on-scroll stagger-animation">
                             <h5>Experience & Expertise:</h5>
-                            <p>[Director's name] brings over [X] years of experience in property valuation and real estate advisory services. With a deep understanding of the South African property market, [he/she] has successfully led numerous high-profile valuation projects across residential, commercial, and agricultural sectors.</p>
-                            <p>Under [his/her] leadership, Alwandeaphiwe has established itself as a trusted partner for clients seeking accurate and reliable property valuations. [Director's name] is committed to maintaining the highest professional standards while driving innovation in valuation methodologies.</p>
+                            <p>Mduduzi Zondi brings over 10 years of experience in property valuation and real estate advisory services. With a deep understanding of the South African property market, he has successfully led numerous high-profile valuation projects across residential, commercial, and agricultural sectors.</p>
+                            <p>Under his leadership, Alwandeaphiwe has established itself as a trusted partner for clients seeking accurate and reliable property valuations. Mduduzi is committed to maintaining the highest professional standards while driving innovation in valuation methodologies.</p>
                         </div>
                         <div class="specializations animate-on-scroll stagger-animation">
                             <h5>Areas of Specialization:</h5>
                             <div class="specialization-tags">
-                                <span class="tag">Commercial Properties</span>
-                                <span class="tag">Residential Valuations</span>
-                                <span class="tag">Agricultural Land</span>
-                                <span class="tag">Municipal Appeals</span>
-                                <span class="tag">Market Analysis</span>
+                                <span class="tag">REITs</span>
+                                <span class="tag">Plant and Equipment</span>
+                                <span class="tag">Air Rights</span>
+                                <span class="tag">Servitudes</span>
+                                <span class="tag">Expropriation</span>
                             </div>
                         </div>
                     </div>
