Update hero image to office building
Replaced the hero image and related meta tags in index.html to use 'hero-office-building.jpg' instead of 'hero-property.jpg' for a more relevant visual representation. Added the new image file to the project.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://www.alwandeaphiwe.co.za/">
     <meta property="og:title" content="Professional Property Valuation Services South Africa | Alwandeaphiwe">
     <meta property="og:description" content="Expert property valuation services in South Africa. Commercial, residential, agricultural valuations, municipal objections & market analysis.">
-    <meta property="og:image" content="images/hero-property.jpg">
+    <meta property="og:image" content="images/hero-office-building.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.alwandeaphiwe.co.za/">
     <meta property="twitter:title" content="Professional Property Valuation Services South Africa | Alwandeaphiwe">
     <meta property="twitter:description" content="Expert property valuation services in South Africa. Commercial, residential, agricultural valuations, municipal objections & market analysis.">
-    <meta property="twitter:image" content="images/hero-property.jpg">
+    <meta property="twitter:image" content="images/hero-office-building.jpg">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.alwandeaphiwe.co.za/">
@@ -101,7 +101,7 @@
                         <a href="services.html" class="btn">Our Services</a>
                     </div>
                     <div class="hero-image">
-                        <img src="images/hero-property.jpg" alt="Modern property valuation - Professional real estate services" loading="lazy" />
+                        <img src="images/hero-office-building.jpg" alt="Modern commercial office building - Professional property valuation services" loading="lazy" />
                     </div>
                 </div>
             </div>
