--- a/about.html
+++ b/about.html
@@ -119,8 +119,7 @@
                 <h2 class="animate-on-scroll">Our Leadership</h2>
                 <div class="director-profile animate-scale">
                     <div class="director-image">
-                        <!-- Professional director placeholder image -->
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=500&fit=crop&crop=face" alt="Director Profile Photo" loading="lazy" />
+                        <img src="images/director.jpeg" alt="Mduduzi Zondi - Managing Director & Principal Valuer" loading="lazy" />
                         <div class="director-overlay">
                             <h3>Managing Director</h3>
                         </div>
