Redesign hero section and update styles
Revamped the hero section in index.html with improved layout, new headline structure, and added call-to-action buttons. Updated style.css for modernized section styling, enhanced header and navigation appearance, improved button designs, and refined responsive behavior for a more visually appealing and user-friendly interface.

--- a/index.html
+++ b/index.html
@@ -93,15 +93,13 @@
 
     <main>
         <section class="hero">
-            <div class="container">
-                <div class="hero-content">
-                    <div class="hero-text">
-                        <h1>Expert Property Valuation</h1>
-                        <p>Accurate, reliable, and professional valuation services across South Africa.</p>
-                        <a href="services.html" class="btn">Our Services</a>
-                    </div>
-                    <div class="hero-image">
-                        <img src="images/hero-office-building.jpg" alt="Modern commercial office building - Professional property valuation services" loading="lazy" />
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Expert Property Valuation <span>Services</span></h1>
+                    <p>Accurate, reliable, and professional valuation services across South Africa. B-BBEE Level 1 contributor with SACPVP registered valuers.</p>
+                    <div class="hero-buttons">
+                        <a href="services.html" class="btn btn-primary">Our Services</a>
+                        <a href="contact.html" class="btn btn-secondary">Get Quote</a>
                     </div>
                 </div>
             </div>
