Update meta description and director image extension
Corrected the SACPVP acronym in the meta description and changed the director image file extension from .jpeg to .jpg for consistency.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     
     <!-- SEO Meta Tags -->
     <title>About Professional Property Valuers | Alwandeaphiwe (Pty) Ltd - B-BBEE Level 1</title>
-    <meta name="description" content="Learn about Alwandeaphiwe (Pty) Ltd - 100% black-owned, B-BBEE Level 1 property valuation company. Expert valuers registered with SACPVP serving South Africa since 2022.">
+    <meta name="description" content="Learn about Alwandeaphiwe (Pty) Ltd - 100% black-owned, B-BBEE Level 1 property valuation company. Expert valuers registered with SACPVPVP serving South Africa since 2022.">
     <meta name="keywords" content="about property valuers, B-BBEE property valuation, SACPVP registered valuers, professional property valuation company, South African property valuers, black-owned business">
     <meta name="author" content="Alwandeaphiwe (Pty) Ltd">
     <meta name="robots" content="index, follow">
@@ -119,7 +119,7 @@
                 <h2 class="animate-on-scroll">Our Leadership</h2>
                 <div class="director-profile animate-scale">
                     <div class="director-image">
-                        <img src="images/director.jpeg" alt="Mduduzi Zondi - Managing Director & Principal Valuer" loading="lazy" />
+                        <img src="images/director.jpg" alt="Mduduzi Zondi - Managing Director & Principal Valuer" loading="lazy" />
                         <div class="director-overlay">
                             <h3>Managing Director</h3>
                         </div>
