Add RICS affiliation and logo to about page
Updated about.html to include the Royal Institution of Chartered Surveyors (RICS) as an affiliation, added the RICS logo image, and referenced RICS in the professional standards statement. Also fixed the director image filename casing.

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                 <h2 class="animate-on-scroll">Our Leadership</h2>
                 <div class="director-profile animate-scale">
                     <div class="director-image">
-                        <img src="images/director.jpg" alt="Mduduzi Zondi - Managing Director & Principal Valuer" loading="lazy" />
+                        <img src="images/Director.jpg" alt="Mduduzi Zondi - Managing Director & Principal Valuer" loading="lazy" />
                         <div class="director-overlay">
                             <h3>Managing Director</h3>
                         </div>
@@ -209,9 +209,13 @@
                         <img src="images/SAIV-Logo-2018-Final-1200x567.png" alt="SAIV Logo">
                         <p>South African Institute of Valuers (SAIV)</p>
                     </div>
+                    <div class="logo-container">
+                        <img src="images/RICS.png" alt="RICS Logo">
+                        <p>Royal Institution of Chartered Surveyors (RICS)</p>
+                    </div>
                 </div>
                 <div class="affiliation-text">
-                    <p>Our valuers are registered with SACPVP and adhere to the International Valuation Standards, as adopted by SAIV. We are committed to upholding the highest professional standards.</p>
+                    <p>Our valuers are registered with SACPVP and adhere to the International Valuation Standards, as adopted by SAIV and RICS. We are committed to upholding the highest professional standards.</p>
                     <blockquote>
                         "Market Value is the estimated amount for which an asset should exchange on the date of valuation between a willing buyer and a willing seller in an arm's-length transaction after proper marketing wherein the parties had each acted knowledgeably, prudently, and without compulsion."
                         <footer>- International Valuation Standards Committee</footer>
