--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Alwandeaphiwe Logo" class="logo-image">
+                <img src="images/logo.jpg" alt="Alwandeaphiwe Logo" class="logo-image">
                 <span class="logo-text">Alwandeaphiwe</span>
             </a>
             <ul class="nav-links">
